--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ SQLAlchemy==2.0.46
 Werkzeug==3.1.6
 python-dotenv==1.0.0
 gunicorn==23.0.0
-psycopg2-binary
-pymongo
-dnspython
-tinydb
+psycopg2-binary==2.9.11
+pymongo==4.16.0
+dnspython==2.8.0
+tinydb==4.8.0
